--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,7 +2,7 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col-lg-5 ml-auto">
-          <h1 class="text-white">{{title | reverse }}</h1><br>
+          <h1 class="text-white">{{title | replace }}</h1><br>
           <h1 class="text-white">{{currentDate | date}}</h1>
 
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta, molestias repudiandae pariatur.</p>
