--- a/src/app/components/allplayers/allplayers.component.html
+++ b/src/app/components/allplayers/allplayers.component.html
@@ -32,9 +32,9 @@
                   <td>{{p.nbr}}</td>
                   <td>{{p.age}}</td>
                   <td>
-                    <button class="btn btn-info mr-2" (click)="infoPlayer(p.id)">Info</button>
+                    <button class="btn btn-info mr-2" (click)="infoPlayer(p._id)">Info</button>
                     <button class="btn btn-success mr-2" >Edit</button>
-                    <button class="btn btn-danger" (click)="deletePlayer(p.id)" >Delete</button>
+                    <button class="btn btn-danger" (click)="deletePlayer(p._id)" >Delete</button>
                   </td>
                 </tr>
               </tbody>
