--- a/src/app/components/addplayer/addplayer.component.html
+++ b/src/app/components/addplayer/addplayer.component.html
@@ -13,7 +13,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-7">
-          <form [formGroup]="palyerForm"  (ngSubmit)="addPlayer()">
+          <form #playerForm="ngForm"  (ngSubmit)="addPlayer()">
             <div class="form-group">
               <input type="text" class="form-control" [(ngModel)]="player.name" [ngModelOptions]="{standalone : true}"  placeholder="Player name">
             </div>
