--- a/src/app/components/infomatch/infomatch.component.html
+++ b/src/app/components/infomatch/infomatch.component.html
@@ -12,7 +12,17 @@
           <div class="team-1 w-50">
             <div class="team-details w-100 text-center">
               <img src="assets/images/logo_1.png" alt="Image" class="img-fluid">
-              <h3>{{match.teamOne}} <span [ngStyle]="{color : compare(match.scoreOne , match.scoreTwo)[1]}">({{compare(match.scoreOne , match.scoreTwo)[0]}})</span></h3>
+              <!-- [ngStyle]="{color : compare(match.scoreOne , match.scoreTwo)[1]}" -->
+              <h3><span [ngClass]="{
+                win: compare(match.scoreOne , match.scoreTwo)[0] == 'Win',
+                loss: compare(match.scoreOne , match.scoreTwo)[0] == 'Loss',
+                draw:compare(match.scoreOne , match.scoreTwo)[0] == 'Draw'
+              }" >{{match.teamOne}}</span>
+              <span [ngClass]="{
+                win: compare(match.scoreOne , match.scoreTwo)[0] == 'Win',
+                loss: compare(match.scoreOne , match.scoreTwo)[0] == 'Loss',
+                draw:compare(match.scoreOne , match.scoreTwo)[0] == 'Draw'
+              }" >({{compare(match.scoreOne , match.scoreTwo)[0]}})</span></h3>
               <ul class="list-unstyled">
                 <li>Anja Landry (7)</li>
                 <li>Eadie Salinas (12)</li>
@@ -24,7 +34,17 @@
           <div class="team-2 w-50">
             <div class="team-details w-100 text-center">
               <img src="assets/images/logo_2.png" alt="Image" class="img-fluid">
-              <h3>{{match.teamTwo}} <span [ngStyle]="{color : compare(match.scoreTwo , match.scoreOne)[1]}">({{compare(match.scoreTwo , match.scoreOne)[0]}})</span></h3>
+              <!-- [ngStyle]="{color : compare(match.scoreTwo , match.scoreOne)[1]}" -->
+              <h3><span [ngClass]="{
+                win: compare(match.scoreTwo , match.scoreOne)[0] == 'Win',
+                loss: compare(match.scoreTwo , match.scoreOne)[0] == 'Loss',
+                draw:compare(match.scoreTwo , match.scoreOne)[0] == 'Draw'
+              }">{{match.teamTwo}}</span>
+              <span [ngClass]="{
+                win: compare(match.scoreTwo , match.scoreOne)[0] == 'Win',
+                loss: compare(match.scoreTwo , match.scoreOne)[0] == 'Loss',
+                draw:compare(match.scoreTwo , match.scoreOne)[0] == 'Draw'
+              }">({{compare(match.scoreTwo , match.scoreOne)[0]}})</span></h3>
               <ul class="list-unstyled">
                 <li>Macauly Green (3)</li>
                 <li>Arham Stark (8)</li>
