--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -16,6 +16,8 @@
               <li><a href="blog.html" class="nav-link">Blog</a></li>
               <li><a routerLink="/contact"  class="nav-link">Contact</a></li>
               <li><a routerLink="/users"  class="nav-link">Sign up</a></li>
+              <li><a routerLink="/login"  class="nav-link">Login</a></li>
+
             </ul>
           </nav>
 
