--- a/src/app/components/matches/matches.component.html
+++ b/src/app/components/matches/matches.component.html
@@ -4,7 +4,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12" *ngFor="let m of matches">
-      <app-match [match]="m"></app-match>
+      <app-match [match]="m" (newEvent)="deleteMatch($event)"></app-match>
       </div>
     </div>
   </div> 
