--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -15,7 +15,7 @@
               <li><a routerLink="/allplayers" class="nav-link">Players</a></li>
               <li><a href="blog.html" class="nav-link">Blog</a></li>
               <li><a routerLink="/contact"  class="nav-link">Contact</a></li>
-              <li><a routerLink="/users"  class="nav-link">Sign up</a></li>
+              <li><a routerLink="/userSignup"  class="nav-link">Sign up</a></li>
               <li><a routerLink="/login"  class="nav-link">Login</a></li>
 
             </ul>
