--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -14,20 +14,20 @@
       <div class="row">
         <div class="col-lg-7">
           
-          <form [formGroup]="loginForm">
+          <form #loginForm="ngForm" (ngSubmit)="login()">
 
             <div class="form-group">
-                <input type="text" class="form-control" formControlName="email" placeholder="Email">
+                <input type="text" class="form-control" [(ngModel)]="user.email" [ngModelOptions]="{standalone : true}" placeholder="Email">
               </div>
 
 
               <div class="form-group">
-                <input type="text" class="form-control" formControlName="password" placeholder="Password">
+                <input type="text" class="form-control" [(ngModel)]="user.password" [ngModelOptions]="{standalone : true}" placeholder="Password">
               </div>
               
             
             <div class="form-group">
-              <input type="button" (click)="login()" class="btn btn-primary py-3 px-5" value="Sign up">
+              <input type="submit"  class="btn btn-primary py-3 px-5" value="Sign up">
            </div>
           </form>  
         </div>
