--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -10,13 +10,16 @@
         <div class="ml-auto">
           <nav class="site-navigation position-relative text-right" role="navigation">
             <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
-              <li class="active"><a href="index.html" class="nav-link">Home</a></li>
-              <li><a routerLink="/allmatches" class="nav-link">Matches</a></li>
-              <li><a routerLink="/allplayers" class="nav-link">Players</a></li>
-              <li><a href="blog.html" class="nav-link">Blog</a></li>
-              <li><a routerLink="/contact"  class="nav-link">Contact</a></li>
-              <li><a routerLink="/userSignup"  class="nav-link">Sign up</a></li>
-              <li><a routerLink="/login"  class="nav-link">Login</a></li>
+              <li [routerLinkActiveOptions]="{exact:true}" routerLinkActive="active"><a routerLink="/" class="nav-link">Home</a></li>
+              <li [routerLinkActiveOptions]="{exact:true}" routerLinkActive="active"><a routerLink="/allmatches" class="nav-link">Matches</a></li>
+              <li [routerLinkActiveOptions]="{exact:true}" routerLinkActive="active"><a routerLink="/allplayers" class="nav-link">Players</a></li>
+              <li [routerLinkActiveOptions]="{exact:true}" routerLinkActive="active"><a routerLink="/blog" class="nav-link">Blog</a></li>
+              <li [routerLinkActiveOptions]="{exact:true}" routerLinkActive="active"><a routerLink="/contact"  class="nav-link">Contact</a></li>
+              <li [routerLinkActiveOptions]="{exact:true}" routerLinkActive="active"><a routerLink="/userSignup" *ngIf="!isLogged()" class="nav-link">Sign up</a></li>
+              <li [routerLinkActiveOptions]="{exact:true}" routerLinkActive="active"><a routerLink="/login" *ngIf="!isLogged()" class="nav-link">Login</a></li>
+              <li [routerLinkActiveOptions]="{exact:true}" routerLinkActive="active"><a routerLink="/login"  *ngIf="isLogged()" class="nav-link">Logout</a></li>
+
+              
 
             </ul>
           </nav>
